recipes/dotnet-app-deployment.yaml
# Tell us about your experience using dotnet monitor: https://aka.ms/dotnet-monitor-survey
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-exampleapp
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exampleapp
  template:
    metadata:
      labels:
        app: exampleapp
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: mcr.microsoft.com/dotnet/samples:aspnetapp
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /diag
              name: diagvol
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
        - name: monitor
          image: mcr.microsoft.com/dotnet/monitor:8
          # DO NOT use the --no-auth argument for deployments in production; this argument is used for demonstration
          # purposes only in this example. Please continue reading after this example for further details.
          args: ["collect", "--no-auth"]
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
          volumeMounts:
            - mountPath: /diag
              name: diagvol
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: diagvol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
  namespace: apps
spec:
  selector:
    app: exampleapp
  ports:
    - name: dotnet-monitor
      protocol: TCP
      port: 52323
      targetPort: 52323
    - name: dotnet-monitor-metrics
      protocol: TCP
      port: 52325
      targetPort: 52325
